--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: kyria_rev3_left nice_view_adapter nice_view
+    shield: kyria_rev3_left nice_view_adapter nice_epaper
   - board: nice_nano_v2
-    shield: kyria_rev3_right nice_view_adapter nice_view
+    shield: kyria_rev3_right nice_view_adapter nice_epaper
