--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -3,7 +3,20 @@
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the Kyria OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Display Options
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_OLED_WIDGET_WPM=n
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA=n
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=96000
+
+# Battery Saving
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=60000
 
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
