--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -19,8 +19,8 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=60000
 
 # Uncomment the following lines to enable RGB underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 
 # mouse emulation
 CONFIG_ZMK_POINTING=y
